--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "pretty": true,
     "target": "es5",
     "module": "es6",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": true,
     "noUnusedLocals": true,
     "listEmittedFiles": true,
