--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,15 @@
 {
   "printWidth": 128,
   "singleQuote": true,
+  "arrowParens": "avoid",
+  "trailingComma": "none",
   "overrides": [
     {
-      "files": ["*.css", "*.less", "*.scss"],
+      "files": [
+        "*.css",
+        "*.less",
+        "*.scss"
+      ],
       "options": {
         "singleQuote": false
       }
