--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
   "name": "image-ready",
   "version": "1.0.0",
   "description": "A tiny library for get the natural size of the image before the image is loaded.",
-  "main": "image-ready.js",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
+  "typings": "typings/index.d.ts",
+  "files": [
+    "cjs",
+    "esm",
+    "typings"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nuintun/image-ready.git"
@@ -21,10 +28,28 @@
     "url": "https://github.com/nuintun/image-ready/issues"
   },
   "homepage": "https://github.com/nuintun/image-ready#readme",
+  "scripts": {
+    "lint": "tsc --noEmit",
+    "clean": "node tools/clean.js",
+    "prepublishOnly": "npm run build",
+    "build:cjs": "rollup -c tools/rollup.cjs.js",
+    "build:esm": "rollup -c tools/rollup.esm.js",
+    "build:examples": "rollup -c tools/rollup.examples.js",
+    "format": "prettier --write tools src examples cjs esm typings",
+    "build:main": "npm run build:cjs && npm run build:esm && npm run build:typings",
+    "build:typings": "tsc --declaration --emitDeclarationOnly --declarationDir typings",
+    "build": "npm run clean && npm run build:main && npm run build:examples && npm run format"
+  },
+  "dependencies": {
+    "tslib": "^2.3.1"
+  },
   "devDependencies": {
-    "rollup": "^1.12.0",
-    "terser": "^3.17.0",
-    "typescript": "^3.4.5",
-    "rollup-plugin-typescript2": "^0.21.0"
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "magic-string": "^0.26.1",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.70.2",
+    "typescript": "^4.6.3"
   }
 }
